저장된 주소 불러오기

--- a/src/main/resources/templates/orderPages/orderSave2.html
+++ b/src/main/resources/templates/orderPages/orderSave2.html
@@ -211,6 +211,7 @@
 
 
     const myInform = () => {
+        console.log("myInform");
         const memberAddress = document.querySelector('input[name=memberAddress]');
         const detailAddress = document.querySelector('input[name=detailAddress]');
         const extraAddress = document.querySelector('input[name=extraAddress]');
