--- a/src/main/resources/templates/cartPages/cartList.html
+++ b/src/main/resources/templates/cartPages/cartList.html
@@ -17,21 +17,21 @@
     <ul class="cart_list">
         <li>
             <div class="checkbox">
-                <input type="checkbox" name="all_chk" id="all_chk">
+                <input type="checkbox" name="all_chk" id="all_chk" checked th:onclick="checkAll([[${cartList}]])">
                 <label for="all_chk">전체선택</label>
             </div>
-            <div class="del_btn">삭제 (<span class="num">0</span>)</div>
+<!--            <div class="del_btn">삭제 (<span class="num">0</span>)</div>-->
         </li>
         <li th:each="cart:${cartList}">
             <div class="checkbox">
-                <input type="hidden" id="cartId" th:value="${cartList[0].id}">
-                <input type="checkbox" name="item_chk" id="item_chk01">
-                <label for="item_chk01"></label>
+                <input type="checkbox" th:id="${cart.id}" checked th:value="${cart.id}" name="item_chk"
+                       th:onclick="checkBox([[${cart}]])">
+                <label th:for="${cart.id}"></label>
             </div>
             <div class="item_detail">
                 <img th:src="@{|/upload/${cart.itemImage}}" alt="" width="50" height="50">
                 <p class="name"><strong th:text="${cart.itemName}"></strong></p>
-<!--                <p class="txt">텍스트</p>-->
+                <!--                <p class="txt">텍스트</p>-->
             </div>
             <div class="opt_info">
                 <strong class="price_unit" th:text="${cart.itemPrice}"></strong>원
@@ -43,7 +43,8 @@
                             th:text="${cart.itemPrice}*${cart.cartCount}"></strong>원
                     <span class="del_li_btn">
                         <img
-                            th:src="@{https://tictoc-web.s3.ap-northeast-2.amazonaws.com/web/img/icon/btn_del_circle.svg}" th:onclick="deleteFn([[${cart}]])"></span>
+                                th:src="@{https://tictoc-web.s3.ap-northeast-2.amazonaws.com/web/img/icon/btn_del_circle.svg}"
+                                th:onclick="deleteFn([[${cart}]])"></span>
                 </div>
             </div>
         </li>
@@ -57,7 +58,8 @@
     <div class="cart_total_area">
         <p>결제 정보</p>
         <div class="cart_total_price">
-            <p>총 상품금액 <strong class="item_price_total" id="item_price_total"></strong>원 <span class="plus_ic"></span></p>
+            <p>총 상품금액 <strong class="item_price_total" id="item_price_total"></strong>원 <span class="plus_ic"></span>
+            </p>
         </div>
     </div>
 
@@ -71,9 +73,35 @@
 
 
 <script th:inline="javascript">
+    //전체체크박스
+    const checkAll = (cartList) => {
+        const length = document.getElementById("cartList").value;
+        console.log("checkBox")
+        const allChk = document.getElementById('all_chk');
+        if (allChk.checked == true) {
+            for (let i = 0; i < length; i++) {
+                document.getElementById(cartList[i].id).checked = true;
+            }
+            checkPrice();
+        } else {
+            allChk.checked = false;
+            for (let i = 0; i < length; i++) {
+                document.getElementById(cartList[i].id).checked = false;
+            }
+            document.querySelector(".item_price_total").innerHTML = 0;
+            checkPrice();
+        }
+    }
+
+    //체크박스
+    const checkBox = (cart) => {
+        checkPrice();
+    }
+
+
     //계속 쇼핑하기
     const goBack = () => {
-        location.href="/item/main";
+        location.href = "/item/main";
     }
     //주문하기
     const orderFn = () => {
@@ -82,11 +110,9 @@
         const cartList = [[${cartList}]];
         if (cartList.length == 0) {
             alert("장바구니에 담긴 상품이 없습니다.");
-        }else {
-            const cartId = document.getElementById("cartId").value;
-            console.log(cartId);
+        } else {
             const userId = [[${session.member.userId}]];
-            location.href = "/order/cart?cartId="+cartId+"&userId="+userId+"&itemPriceTotal="+itemPriceTotal;
+            location.href = "/order/cart?userId=" + userId + "&itemPriceTotal=" + itemPriceTotal;
         }
 
     }
@@ -98,54 +124,74 @@
         const itemPrice = find.itemPrice;
         let itemPriceTotal = 0;
         const cartList = [[${cartList}]];
-        for(let i = 0; i < length; i++){
+        for (let i = 0; i < length; i++) {
             itemPriceTotal += cartList[i].itemPrice * cartList[i].cartCount;
         }
 
         $.ajax({
-            type:"get",
-            url:"/cart/delete",
-            data:{
+            type: "get",
+            url: "/cart/delete",
+            data: {
                 cartId: id
             },
             dataType: "text",
-            success:function (cartResult){
+            success: function (cartResult) {
                 console.log(id)
                 console.log(cartResult);
-                document.querySelector(".item_price_total").innerHTML = itemPriceTotal-itemPrice;
-                document.getElementById("cartList").value = length-1;
+                document.querySelector(".item_price_total").innerHTML = itemPriceTotal - itemPrice;
+                document.getElementById("cartList").value = length - 1;
             },
-            error: function (){
+            error: function () {
                 console.log("실패");
 
             }
         });
     }
+    //계산
+    const checkPrice = () => {
+        console.log("총 상품금액");
+        const length = document.getElementById("cartList").value;
+        let checkboxes = document.querySelectorAll('input[type="checkbox"]:checked');
+        const allChk = document.getElementById('all_chk');
+        console.log(checkboxes);
+        const cartList2 = [[${cartList}]];
+        let sum = 0;
+        for (let i = 0; i < length; i++) {
+            if (document.getElementById(cartList2[i].id).checked == true) {
+                sum += Number(document.getElementById(cartList2[i].id + 'price_amount').textContent);
+                document.querySelector(".item_price_total").innerHTML = sum;
+            }
+        }
+        if (checkboxes.length == 1 && allChk.checked == true) {
+            document.querySelector(".item_price_total").innerHTML = 0;
+            allChk.checked = false;
+        }else if(checkboxes.length == 0){
+            document.querySelector(".item_price_total").innerHTML = 0;
+        }
+    }
+
+
     //총 상품금액
     window.onload = function () {
-        const length = document.getElementById("cartList").value;
-        let itemPriceTotal = 0;
-        const cartList = [[${cartList}]];
-        for(let i = 0; i < length; i++){
-            itemPriceTotal += cartList[i].itemPrice * cartList[i].cartCount;
-        }
-        document.querySelector(".item_price_total").innerHTML = itemPriceTotal;
+        checkPrice();
     }
+
+
     //수량변경 시 상품금액
     const total = (cart) => {
         let orderCount = document.getElementById(cart.id + "a").value;
         $.ajax({
-            type:"get",
-            url:"/cart/change",
-            data:{
+            type: "get",
+            url: "/cart/change",
+            data: {
                 id: cart.id,
                 cartCount: orderCount
             },
             dataType: "text",
-            success:function (cartResult){
-              console.log("성공")
+            success: function (cartResult) {
+                console.log("성공")
             },
-            error: function (){
+            error: function () {
                 console.log("실패");
 
             }
@@ -177,24 +223,25 @@
             $('.del_btn .num').text(recent_delete_cnt);
         }
         $(this).offsetParent().parent().remove();
+        checkPrice();
         //console.log($(this).offsetParent().parents().find('input[type="checkbox"]').is(':checked'));
         // pay_total_func();
     });
 
     //삭제 버튼을 누르면 지정된 상품 삭제
-    $('.del_btn').on('click', function () {
-        var recent_delete_cnt = $('.del_btn .num').text();
-        $("input:checkbox[name=item_chk]").each(function () {
-            var check_delete_ck = $(this).offsetParent().find('input[type="checkbox"]').is(':checked');
-            console.log(check_delete_ck);
-            if (check_delete_ck == true) {
-                recent_delete_cnt = recent_delete_cnt - 1;
-                $('.del_btn .num').text(recent_delete_cnt);
-                $(this).offsetParent().remove();
-            }
-        });
-        // pay_total_func();
-    });
+    // $('.del_btn').on('click', function () {
+    //     var recent_delete_cnt = $('.del_btn .num').text();
+    //     $("input:checkbox[name=item_chk]").each(function () {
+    //         var check_delete_ck = $(this).offsetParent().find('input[type="checkbox"]').is(':checked');
+    //         console.log(check_delete_ck);
+    //         if (check_delete_ck == true) {
+    //             recent_delete_cnt = recent_delete_cnt - 1;
+    //             $('.del_btn .num').text(recent_delete_cnt);
+    //             $(this).offsetParent().remove();
+    //         }
+    //     });
+    //     // pay_total_func();
+    // });
 
 </script>
 </html>
