--- a/src/main/resources/templates/orderPages/orderSave2.html
+++ b/src/main/resources/templates/orderPages/orderSave2.html
@@ -134,7 +134,7 @@
         let aJsonArray = new Array();
         for (let i = 0; i < [[${cartList}]].length; i++) {
             aJson = new Object();
-            aJson.id = [[${cartList}]][i].id;
+            aJson.cartItemId = [[${cartList}]][i].id;
             aJson.itemName = [[${cartList}]][i].itemName;
             aJson.itemPrice = [[${cartList}]][i].itemPrice;
             aJson.cartCount = [[${cartList}]][i].cartCount;
