--- a/src/main/resources/templates/cartPages/cartList.html
+++ b/src/main/resources/templates/cartPages/cartList.html
@@ -129,7 +129,7 @@
                 console.log(b.checked)
                 if(b.checked == true){
                     aJson = new Object();
-                    aJson.id = cartList[i].id;
+                    aJson.cartItemId = cartList[i].id;
                     aJson.itemName = cartList[i].itemName;
                     aJson.itemPrice = cartList[i].itemPrice;
                     aJson.cartCount = cartList[i].cartCount;
