--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -5,6 +5,7 @@
     <title>detail</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/style/style3.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/css/itemDetail.css}" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--    시간설정-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
@@ -18,55 +19,6 @@
     <link rel="stylesheet" th:href="@{/css/starRatingItemDetail.css}" type="text/css">
     <script th:src="app.js"></script>
 
-    <style>
-        * {
-            font-family: 'Jua', sans-serif;
-            font-family: 'Nanum Gothic', sans-serif;
-            font-family: 'Noto Sans KR', sans-serif;
-        }
-
-        /*이미지, 글씨 가운데 오도록*/
-        .container {
-            margin-top: 100px;
-            margin-right: auto;
-            margin-left: auto;
-        }
-
-        /*이미지, 글씨 사이 간격*/
-        .information {
-            margin-left: 500px;
-            margin-bottom: 100px;
-        }
-
-        .image-form {
-            position: absolute;
-        }
-
-        /*가격 폼*/
-        .price-form {
-            color: seagreen;
-            font-weight: bold;
-            font-size: large;
-        }
-
-        /*가격, 구매수량, 택배배송, 총 상품 금액 글씨 폼*/
-        label {
-            margin-top: 20px;
-            display: inline-block;
-
-        }
-
-        /*label 값 폼*/
-        .text-form {
-            display: inline-block;
-        }
-
-        /*작은 이미지 폼*/
-        .smImage-form {
-            float: left;
-        }
-
-    </style>
 </head>
 <body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
@@ -79,13 +31,8 @@
             <img th:src="@{|/upload/${item.storedFileNameItem.get(0)}}" alt="" width="300" height="300" id="lgImage">
         </div>
         <div th:each="fileName: ${item.storedFileNameItem}">
-            <img th:src="@{|/upload/${fileName}}" alt="" width="50" height="50" class="smImage-form"
-                 th:onclick="imageClick([[${fileName}]])">
+            <img th:src="@{|/upload/${fileName}}" alt="" width="50" height="50" class="smImage-form" th:onclick="imageClick([[${fileName}]])">
         </div>
-        <div>
-
-        </div>
-
     </div>
 
     <div class="information">
@@ -128,7 +75,7 @@
 <!--        </div>-->
 <!--</div>-->
 
-<div style="text-align: center; margin-top: 100px;">
+<div style="text-align: center; margin-top: 80px; margin-bottom: 160px">
     <!--                <th>설명</th>-->
     <div th:text="${item.itemContents}"></div>
 </div>
@@ -141,23 +88,19 @@
     <div th:unless="${commentList == 'empty'}">
         <table class="table">
             <tr>
-                <th>주문후기</th>
-                <th>작성자</th>
-                <th>작성시간</th>
-                <th>별점</th>
-
+                <th style="padding-left: 200px;">주문후기</th>
+                <th style="width: 146px;">작성자</th>
+                <th style="width: 216px;">작성시간</th>
+                <th style="width: 116px;">별점</th>
             </tr>
             <tr th:each="comment: ${commentList}">
-                <td th:text="${comment.commentContents}"></td>
-                <td th:text="${comment.commentWriter}"></td>
-                <td th:text="*{#temporals.format(comment.commentCreatedDate,'yyyy-MM-dd HH:mm')}"
-                    style="margin-left: 50px;width: 166px;"></td>
-                <div class="star-container">
-                    <td th:text="${comment.starCount}"></td>
-                </div>
+                <td th:text="${comment.commentContents}" style="padding-left: 30px;"></td>
+                <td th:text="${comment.commentWriter}" class="comment-font"></td>
+                <td th:text="*{#temporals.format(comment.commentCreatedDate,'yyyy-MM-dd HH:mm')}" class="comment-font"></td>
+                <td th:text="${comment.starCount}"></td>
             </tr>
         </table>
-        <div class="container">
+        <div class="container text-center">
             <ul class="pagination justify-content-center">
                 <li class="page-item">
                     <!--첫페이지 요청 링크 /board?page=1-->
@@ -211,7 +154,7 @@
 </body>
 
 <script th:inline="javascript">
-    //이미지 전환
+    //이미지 클릭시 전환
     const imageClick = (item) => {
         console.log(item);
         const smImage = item;
@@ -242,10 +185,7 @@
                     if (confirm("장바구니에 담겼습니다.  장바구니로 이동하시겠습니까?") == true) {
                         location.href = "/cart/list?userId=" + userId;
                     } else {
-
                     }
-
-
                 },
                 error: function () {
                     console.log("실패");
@@ -277,19 +217,19 @@
         document.getElementById("totalPrice").style.color = "seagreen";
         document.getElementById("totalPrice").style.fontSize = "xx-large";
         document.getElementById("totalPrice").style.fontWeight = "bold";
-
-
     }
-
+    //후기 리스트
     const commentWrite = () => {
         const writer = document.getElementById("commentWriter").value;
         const contents = document.getElementById("commentContents").value;
         const starCount = document.getElementById("starCount").textContent;
         console.log(starCount);
+
+
+
         let id = [[${item.id}]];
         let itemId = [[${item.id}]];
         console.log(itemId);
-        console.log(findId);
         $.ajax({
             type: "post",
             url: "/comment/save",
