--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -10,7 +10,7 @@
 <body>
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container" id="question-list">
-    <table class="table table-striped table-hover text-center">
+    <table class="table table-striped table-hover text-center" th:if="${message} != 'null'">
         <tr>
             <th style="text-align: center">번호</th>
             <th style="text-align: center">제목</th>
@@ -47,7 +47,7 @@
 </div>
 
 
-<div class="container">
+<div th:if="${message} != 'null'"  class="container">
     <ul class="pagination justify-content-center">
         <li class="page-item">
             <!--첫페이지 요청 링크-->
