--- a/src/main/resources/templates/memberPages/memberPasswordCheck.html
+++ b/src/main/resources/templates/memberPages/memberPasswordCheck.html
@@ -34,7 +34,7 @@
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="main">
 <div class="password-container">
-    <form action="/member/password" method="get" name="passwordCheck"></form>
+<!--    <form id="1" action="/member/password" method="get" name="passwordCheck"></form>-->
     <input type="hidden" name="id" th:value="${session.member.id}">
     <input type="hidden" name="userId" th:value="${session.member.userId}">
     <input type="hidden" name="memberEmail" th:value="${session.member.memberEmail}">
@@ -54,20 +54,22 @@
 </div>
 </div>
 </body>
-<script>
+<script th:inline="javascript">
   const check_pwd = () => {
     const pwd = document.getElementById("pwd").value;
     const repwd = document.getElementById("repwd").value;
+    const DBPass = [[${session.member.memberPassword}]]
     if (pwd == "") {
       alert("비밀번호를 입력해주세요.");
     } else if (pwd != repwd) {
-      alert("비밀번호가 일치하지 않습니다.");
-      // document.getElementById("pwdError").innerHTML = "비밀번호가 일치하지 않습니다.";
-      // document.getElementById("pwdError").style.color = "red";
-    } else {
-      document.passwordCheck.submit();
+        alert("비밀번호가 일치하지 않습니다.");
+    } else if(DBPass == repwd && DBPass == pwd) {
+      // document.passwordCheck.submit();
       location.href="/member/update";
+    }else {
+        alert("잘못 입력하셨습니다.");
     }
+
   }
 </script>
 </html>
