장바구니 인터셉터

--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -246,7 +246,7 @@
                 }
             });
         } else {
-            alert("로그인이 필요합니다.");
+           location.href = "/login";
         }
     }
 
