--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -16,58 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap"
           rel="stylesheet">
     <!--  별점-->
-    <link rel="stylesheet" th:href="@{/css/starRatingItemDetail.css}" type="text/css">
-    <script th:src="app.js"></script>
-
-    <style>
-        * {
-            font-family: 'Jua', sans-serif;
-            font-family: 'Nanum Gothic', sans-serif;
-            font-family: 'Noto Sans KR', sans-serif;
-        }
-
-        /*이미지, 글씨 가운데 오도록*/
-        .container {
-            margin-top: 100px;
-            margin-right: auto;
-            margin-left: auto;
-        }
-
-        /*이미지, 글씨 사이 간격*/
-        .information {
-            margin-left: 500px;
-            margin-bottom: 100px;
-        }
-
-        .image-form {
-            position: absolute;
-        }
-
-        /*가격 폼*/
-        .price-form {
-            color: seagreen;
-            font-weight: bold;
-            font-size: large;
-        }
-
-        /*가격, 구매수량, 택배배송, 총 상품 금액 글씨 폼*/
-        label {
-            margin-top: 20px;
-            display: inline-block;
-
-        }
-
-        /*label 값 폼*/
-        .text-form {
-            display: inline-block;
-        }
-
-        /*작은 이미지 폼*/
-        .smImage-form {
-            float: left;
-        }
-
-    </style>
+    <link rel="stylesheet" th:href="@{/css/star.css}" type="text/css">
 </head>
 <body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
@@ -150,7 +99,13 @@
                 <td th:text="${comment.commentContents}" style="padding-left: 30px;"></td>
                 <td th:text="${comment.commentWriter}" class="comment-font"></td>
                 <td th:text="*{#temporals.format(comment.commentCreatedDate,'yyyy-MM-dd HH:mm')}" class="comment-font"></td>
-                <td th:text="${comment.starCount}"></td>
+                <td>
+                    <div class="star-container">
+                        <div th:each="num : ${#numbers.sequence(1,comment.starCount)}" class="star"></div>
+                    </div>
+                </td>
+
+
             </tr>
         </table>
         <div class="container text-center">
@@ -278,8 +233,6 @@
         const contents = document.getElementById("commentContents").value;
         const starCount = document.getElementById("starCount").textContent;
         console.log(starCount);
-
-
 
         let id = [[${item.id}]];
         let itemId = [[${item.id}]];
