--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
     <style>
+        .profile-user-img{
+            width:250px;
+            height:250px;
+            border-radius: 70%;
+            overflow: hidden;
+        }
+        .profile-user-img-img{
+            width:100%;
+            height:100%;
+            object-fit: cover;
+        }
+
         html, body {
             position: relative;
             height: 100%;
@@ -45,19 +57,22 @@
     <!--        e:visual-->
 
     <!--s:section-->
-    <div id="contents">
-        <article>
+    <div id="contents" style="position: relative">
+        <article style="width: 1000px ; height: 450px;">
             <div id="what">
                 <h2>WHAT WE DO</h2>
                 <p>식물, 자연을 이해하고 아끼는 사람이 키웁니다. <br>
                     언제 어디서나 식물을 사랑하는 우리 회원님들을 위해 건강한 식물을 판매하는 “Gardening”입니다. <br>
                     그늘에서도, 겨울에도 잘 자라는 식물!
-                    <br> 플랜테리어, 인테리어화분, 원스톱 식물플랫폼, 푸르다마켓, 공기정화식물, 반려식물, ... <br>
+                    <br> 플랜테리어, 인테리어화분, 원스톱 식물플랫폼, 푸르다마켓, 공기정화식물, 반려식물<br>
                     Gardening 은 협력업체에서 직접보고 셀렉한 최상급 식물만을 판매합니다
                 </p>
+                <div class="profile-user-img" style="position: relative ; left: 500px ; top: -240px" ;>
+                    <img th:src="@{/img/main2.jpg}" class="profile-user-img-img">
+                </div>
             </div>
 
-            <img th:src="@{/img/main2.jpg}">
+
 
         </article>
 
