메인화면 상단메뉴 위치변경

--- a/src/main/resources/templates/commonPages/header.html
+++ b/src/main/resources/templates/commonPages/header.html
@@ -35,10 +35,10 @@
     </style>
     <div id="wrap">
         <!--s:header-->
-        <div id="header_bg"> <!--#1366bf-->
+        <div id="header_bg" style="position: relative"> <!--#1366bf-->
             <header><!--1400px-->
                 <div id="my_menu"><a href="#"><img th:src="@{/img/my_icon.png}" alt="my_menu"></a></div>
-                <ul><!--언어영역-->
+                <ul style="position: relative ; right: 100px; top: 50px"><!--언어영역-->
                     <div>
                         <div th:if="${session.member} != null">
 
